# emr

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AUDIT_CODE_REFERENCE.md  AUDIT_TRAIL_IMPLEMENTATION.md  BACKUP_IMPLEMENTATION_SUMMARY.md  BACKUP_QUICK_REFERENCE.md  BACKUP_SYSTEM.md  CARE_GAP_IMPLEMENTATION.md  CARE_GAP_QUICK_REFERENCE.md  CARE_GAP_SUMMARY.md  CARE_GAP_UI_GUIDE.md  CICD_SETUP_COMPLETE.md  CLAUDE.md  CLOUD_BACKUP_QUICKSTART.md  CLOUD_BACKUP_UI_COMPLETE.md  CODEX.md  CREATED_FILES_SUMMARY.md  CROSS_PLATFORM_SETUP_SUMMARY.md  DELIVERABLES.md  DELIVERY_SUMMARY.txt  DIAGNOSIS_ENGINE_README.md  DIFFERENTIAL_DIAGNOSIS_INTEGRATION.md  DRUG_DATABASE_IMPLEMENTATION.md  ENTITY_EXTRACTION_QUICK_START.md  ENTITY_EXTRACTION_SUMMARY.md  EXPORT_FEATURE_SUMMARY.md  EXPORT_IMPLEMENTATION.md  FILE_STRUCTURE.txt  GEMINI.md  GROK.md  HINDI_TRANSLATIONS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY_SAMPLE_DATA.md  INSTALLATION.md  INSTALLER_IMPLEMENTATION.md  (+75 more)
.github/: CICD_QUICKSTART.md  CODEOWNERS  COMMAND_REFERENCE.md  README.md  pull_request_template.md
.github/workflows/: ci.yml  nightly.yml  release.yml  security.yml
.specify/: ROADMAP.md
.specify/memory/: constitution.md
.specify/proposals/: comprehensive-feature-comparison.md  voice-enhancement-proposal.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
cloud-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package.json  requirements.txt  start.sh  tsconfig.json  wrangler.toml
cloud-api/src/: __init__.py  auth.ts  database.py  index.ts  storage.ts  types.ts  utils.ts
cloud-api/tests/: __init__.py  test_api.py
docassist_mobile/: ANIMATIONS_HAPTICS.md  APK_IPA_BUILD_SUMMARY.md  BUILD_GUIDE.md  BUILD_SUMMARY.txt  COMPILATION_READY.md  EDIT_SCREENS_README.md  INTEGRATION_CHECKLIST.md  MOBILE_APP_COMPLETE.md  PRESCRIPTION_USAGE.md  PRE_BUILD_CHECKLIST.md  QUICK_NOTE_INTEGRATION.md  QUICK_START.md  README.md  build_android.sh  build_ios.sh  create_placeholder_assets.py  main.py  pyproject.toml  requirements.txt  test_mobile_ui.py
docassist_mobile/assets/icons/: README.md
docassist_mobile/assets/splash/: README.md
docassist_mobile/src/: __init__.py
docassist_mobile/src/models/: __init__.py  schemas.py
docassist_mobile/src/services/: __init__.py  auth_service.py  biometric_service.py  local_db.py  offline_queue.py  pdf_service.py  preferences_service.py  sync_client.py  sync_manager.py
docassist_mobile/src/ui/: __init__.py  animations.py  haptics.py  mobile_app.py  navigation.py  tokens.py
docassist_mobile/src/ui/components/: __init__.py  appointment_card.py  bottom_nav.py  floating_action_button.py  lab_card.py  onboarding_page.py  page_indicator.py  patient_card.py  prescription_card.py  pull_to_refresh.py  search_bar.py  skeleton.py  speed_dial.py  sync_indicator.py  sync_status_bar.py  visit_card.py
docassist_mobile/src/ui/screens/: __init__.py  add_appointment_screen.py  add_lab_screen.py  add_patient_screen.py  add_visit_screen.py  biometric_prompt.py  edit_patient_screen.py  home_screen.py  login_screen.py  onboarding_screen.py  patient_detail.py  patient_list.py  prescription_viewer.py  quick_note_screen.py  settings_screen.py  welcome_back_screen.py
docs/: COMMUNICATIONS.md  ENTITY_EXTRACTION.md  I18N_IMPLEMENTATION.md  I18N_QUICK_REFERENCE.md  TUTORIAL_IMPLEMENTATION_SUMMARY.md  TUTORIAL_QUICK_REFERENCE.md  TUTORIAL_SYSTEM.md  VOICE_INTEGRATION.md  database_migrations.md
examples/: communications_demo.py  tutorial_overlay_demo.py  voice_integration_example.py
prompts/: prescription.txt  rag_query.txt
scripts/: README_INSTALLERS.md  install.bat  install.py  install.sh  install_linux.sh  install_macos.sh  install_windows.ps1  setup_ollama.bat  setup_ollama.py  setup_ollama.sh  validate_voice_integration.py
src/: __init__.py
src/data/: drug_interactions.json  flowsheet_definitions.json  initial_drugs.json  initial_phrases.json  initial_templates.json
src/i18n/: README.md  __init__.py  en.json  hi.json  translations.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  app_mode.py  backup.py  clinical_rules.py  cloud_backup_manager.py  context_builder.py  crypto.py  database.py  export.py  llm.py  pdf.py  phonetic.py  rag.py  reference_ranges.py  reminders.py  safety.py  scheduler.py  settings.py  simple_backup.py  sync.py  trend_calculator.py  voice.py  whatsapp.py  whatsapp_settings.py
src/ui/: __init__.py  agent_panel.py  app.py  appointment_panel.py  audit_history_dialog.py  backup_dialog.py  central_panel.py  central_panel_backup.py  dialogs.py  flowsheet_panel.py  interaction_warning_dialog.py  keyboard_shortcuts.py  lab_trends_dialog.py  main_layout.py  navigation.py  patient_panel.py  patient_panel_backup.py  phrase_manager.py  reminder_dialog.py  settings_dialog.py  setup_wizard.py  simple_backup_dialog.py  state.py  status_bar.py  template_browser.py  themes.py  tokens.py  whatsapp_share_dialog.py
src/utils/: __init__.py  platform_utils.py  sample_data.py
test_backups/backup_2026-01-05_07-24-09/: backup_manifest.json
test_backups/backup_2026-01-05_07-25-02/: backup_manifest.json
test_chroma/: chroma.sqlite3
tests/: CLINICAL_TESTS_README.md  README.md  TEST_SUITE_SUMMARY.txt  __init__.py  clinical_conftest.py  conftest.py  reporter.py  test_audit_trail.py  test_backup.py  test_clinical_integration.py  test_clinical_nlp.py  test_clinical_scenarios.py  test_communication_services.py  test_comprehensive.py  test_consultation_workflow.py  test_crypto.py  test_database.py  test_diagnosis_engine.py  test_drug_safety.py  test_fixtures.py  test_integration.py  test_integrity.py  test_main.py  test_monitoring.py  test_monitoring_simple.py  test_report.txt  test_runner_config.py  test_scheduler.py  test_security.py  test_settings.py  test_sync.py  test_validation.py  test_voice_integration.py  test_watch.py
tests/fixtures/: EXAMPLES.py  FIXTURE_SUMMARY.txt  README.md  __init__.py  (+13 more)
(+259 files in other folders)
